@startuml

class Aluno {
    - String nome
    - int matricula
    + String getNome()
    + int getMatricula()
}

class Disciplina {
    - String nome
    - int creditos
    + String getNome()
    + int getCreditos()
}

class Matricula {
    - Aluno aluno
    - Turma turma
    - Date dataMatricula
    + Aluno getAluno()
    + Turma getTurma()
    + Date getDataMatricula()
}

class Professor {
    - String nome
    - String departamento
    + String getNome()
    + String getDepartamento()
}

class Secretaria {
    + void gerarCurriculoSemestral(List<Turma> turmas)
    + void fecharMatriculas(List<Turma> turmas)
}

class SistemaCobranca {
    + void gerarCobranca(Aluno aluno, Turma turma)
}

class Turma {
    - Disciplina disciplina
    - Professor professor
    - List<Aluno> alunosMatriculados
    - int ano
    - int semestre
    + Disciplina getDisciplina()
    + Professor getProfessor()
    + int getAno()
    + int getSemestre()
    + List<Aluno> getAlunosMatriculados()
    + boolean verificarMinAlunos()
    + boolean matricularAluno(Aluno aluno)
    + void removerAluno(Aluno aluno)
}

Aluno "1" -- "0..*" Matricula 
Matricula "1" -- "1" Aluno 
Matricula "1" -- "1" Turma
Turma "1" -- "0..*" Aluno 
Turma "1" -- "1" Disciplina 
Turma "1" -- "1" Professor
Secretaria "1" -- "0..*" Turma 
SistemaCobranca "1" -- "0..*" Matricula 

@enduml
